examples/v0.7/errors/function_argument_type_mismatch.nova
fn greet(name: S) {
}

greet(10)